# isaac-sim-surgical-robotics-challenge

./: Old Phantom Compliant Test.usd  Old Phantom Deformable.usd  Old Phantom.usdc  README.md  Surgical Challenge Deformable.usd  Surgical Challenge New Phantom.usd  Surgical Challenge Old Phantom(Outdated).usd  Surgical Challenge Old Phantom.usd  Surgical Challenge Particle.usd  Surgical Challenge Thread.usd  Surgical Challenge.usd  Surgical_Challenge_Old_Phantom.usd  Surgical_Challenge_Old_Phantom_Alternative.usd
ADF/high_res/: BlackGround_Plane.usd  block1.usd  block2.usd  block3.usd  block4.usd  block5.usd  block6.usd  peg1.usd  peg_board.usd  peg_board_s.usd  peg_board_wall_s.usd
Assets/: Compliance Test.usd  ECM.usd  Needle.usd  Needle_Deformable.usd  Needle_Particle.usd  Needle_Thread.usd  Needle_Thread_New.usd  New_Thread.usd  OP_Deform.usd  Old Phantom.usdc  README.md  ROS2Env.usd  Simple_Phantom.usdc  Surgical_Challenge_Old_Phantom.usd  custom_thread_2.usd
Documents/: Isaac Sim Quick Start Guide.docx  Isaac Sim_ System Specifications Ver 3.0.docx  Surgical Robotics Environment for NVIDIA Isaac Sim_ Background Reading Report.docx  Surgical Robotics Environment for NVIDIA Isaac Sim_ Proposal Report.docx
Documents/Legacy/: Isaac Sim Complete Access Link.docx
Scripts/: README.md  custom_test_tkim.py  isaac_client.py  predeterimed_action.py  test_motion_plannig.py
Scripts/surgical_robotics_challenge/tf_function/: CMakeLists.txt  package.xml  setup.py
assets/: ICRA_Challenge.usd  ICRA_Challenge_Simple.usd  README.md  Surgical_Challenge_Env.usd
(+42 files in other folders)
